@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Jan 26 11:25:59 CET 2006
+// Thu Mar 23 20:04:11 CET 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -83,7 +83,7 @@ namespace Mono.Cecil {
 			if (OnExternTypeAdded != null)
 				OnExternTypeAdded (this, new ExternTypeEventArgs (value));
 
-			this.BaseSet (value.FullName, value);
+			this.BaseAdd (value.FullName, value);
 		}
 
 		public void Clear ()
