@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Dec 22 15:41:26 CET 2005
+// Thu Mar 23 20:04:11 CET 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -86,7 +86,7 @@ namespace Mono.Cecil {
 			if (OnTypeDefinitionAdded != null)
 				OnTypeDefinitionAdded (this, new TypeDefinitionEventArgs (value));
 
-			this.BaseSet (value.FullName, value);
+			this.BaseAdd (value.FullName, value);
 		}
 
 		public void Clear ()
