@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Jan 26 11:25:58 CET 2006
+// Thu Mar 23 20:04:10 CET 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -83,7 +83,7 @@ namespace Mono.Cecil {
 			if (OnTypeReferenceAdded != null)
 				OnTypeReferenceAdded (this, new TypeReferenceEventArgs (value));
 
-			this.BaseSet (value.FullName, value);
+			this.BaseAdd (value.FullName, value);
 		}
 
 		public void Clear ()
